--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
-    "preview": "npx nuxthub preview",
-    "deploy": "npx nuxthub deploy",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
     "@nuxt/eslint": "^0.6.1",
-    "@nuxthub/core": "^0.8.5",
-    "nuxt": "^3.14.0"
+    "nuxt": "^3.14.159"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.13.4",
     "@nuxt/eslint-config": "^0.6.1",
+    "@nuxt/image": "^1.8.1",
     "eslint": "^9.14.0",
-    "vue-tsc": "^2.1.10",
-    "wrangler": "3.84.1"
+    "vue-tsc": "^2.1.10"
   },
   "packageManager": "pnpm@9.12.3"
 }
