--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.6.1",
+    "@nuxt/ui": "^2.19.2",
+    "@tailwindcss/typography": "^0.5.15",
     "nuxt": "^3.14.159"
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
     "@nuxt/eslint-config": "^0.6.1",
     "@nuxt/image": "^1.8.1",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "eslint": "^9.14.0",
     "vue-tsc": "^2.1.10"
   },
